--- a/WebContent/css/estilo.css
+++ b/WebContent/css/estilo.css
@@ -2,7 +2,7 @@
 body{
 	font-family: "Trebuchet MS", sans-serif;
 	margin: 10px;
-	background-image: url("./../img/bg1.png");
+	background-image: url("./../img/bg.png");
 	background-repeat: repeat;
 	background-size: cover;
 	background-size: 70%;
@@ -17,9 +17,9 @@ body{
 }
 .footer{
 	font-family: "Trebuchet MS", sans-serif;
+	text-align:center;
 	color:#FFFFF0;
 	margin-bottom:10px;
 	padding: 2em;
 	font-weight:bold;
 }
-
