--- a/WebContent/css/estilo.css
+++ b/WebContent/css/estilo.css
@@ -23,3 +23,9 @@ body{
 	padding: 2em;
 	font-weight:bold;
 }
+.acessoLogin{
+	background-repeat: no-repeat;
+	background-size: 500px;
+	background-size: cover;
+}
+
